bikin dasboard admin 07-08-2024

--- a/public/components/css/admin/style.css
+++ b/public/components/css/admin/style.css
@@ -4,5 +4,5 @@ padding: 0;
 margin: 0;
 box-sizing: border-box;
 font-family: "Inter", sans-serif;
-/* background: #1E2742; */
+background: #1E2742;
 }
