--- a/public/components/css/sidebar.css
+++ b/public/components/css/sidebar.css
@@ -4,11 +4,10 @@
     inset: 20px;
     margin-top: 100px;
     background: #EADBC8;
-    width: 80px;
-    border-left: 10px solid #fff;
+    width: 70px;
     border-radius: 20px;
     overflow: hidden;
-    box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.05);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     transition: 0.5s;
     height: 700px;
 }
@@ -105,7 +104,7 @@ width: 100%;
     width: 100%;
     display: flex;
     text-decoration: none;
-    color: #9A2143;
+    color: rgb(104, 104, 104);
 }
 
 .navigation ul li:nth-child(1){
